--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-paypal-checkout": "^3.2.0",
     "vue-product-zoomer": "^3.0.0",
     "vue-scrollto": "^2.17.1",
+    "vue-select": "^3.18.3",
     "vue-server-renderer": "^2.6.14",
     "vue-slider-component": "3.2.12",
     "vue-template-compiler": "^2.6.11",
