--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-select": "^3.18.3",
     "vue-server-renderer": "^2.6.14",
     "vue-slider-component": "3.2.12",
+    "vue-sweetalert2": "^5.0.5",
     "vue-template-compiler": "^2.6.11",
     "vue-toastification": "^1.7.14",
     "vue2-animate": "^2.1.2",
