--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vee-validate": "^3.1.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "4.1.1",
+    "vue-element-loading": "^2.0.2",
     "vue-feather": "^1.1.1",
     "vue-gallery": "^2.0.1",
     "vue-i18n": "^8.15.0",
