--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-masonry": "^0.11.8",
     "vue-moment": "^4.1.0",
+    "vue-pagination-2": "^3.1.0",
     "vue-paypal-checkout": "^3.2.0",
     "vue-product-zoomer": "^3.0.0",
     "vue-scrollto": "^2.17.1",
